tests/syntax/incorrect_syntax/many_inputs.stderr
error: multiple INPUTs aren't allowed
 --> tests/syntax/incorrect_syntax/many_inputs.rs:6:26
  |
6 |     to_stream!(INPUT(a), INPUT(a), {});
  |                          ^^^^^
